# Proyecto-I

./: client  client.cpp  list.cpp  server  server.cpp
rmlibProyect/rmlib/: main  main.cpp  rmlib.cpp  rmlib.h
rmlibProyect/rmlib/encryption/: encryption.cpp
rmlibProyect/rmlib/rmref_h/: rmRef_H.cpp  rmRef_H.h
rmlibProyect/rmlibserver/: CMakeLists.txt  Makefile  main  main.cpp  test  test.cpp
rmlibProyect/rmlibserver/container/: InfoContainer.cpp  InfoContainer.h
rmlibProyect/rmlibserver/encryption/: encryption.h
rmlibProyect/rmlibserver/list/: List.cpp  List.h  ListHandler.cpp  ListHandler.h  Node.cpp  Node.h
rmlibProyect/rmlibserver/server/: Server.cpp  Server.h
